// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-dialog btnWidth="328px" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      btnWidth="328px" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog cancelLabel 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      cancelLabel 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog default 1`] = `
<p>
  Dialog needs a trigger
</p>
`;

exports[`Storyshots components|m-dialog hint 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      hint 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog negativeLink="false" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      negativeLink="false" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog okLabel 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      okLabel 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog okPrecision 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      okPrecision 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog secBtn="true" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      secBtn="true" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog secBtnLabel 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      secBtnLabel 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog secBtnPrecision 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      secBtnPrecision 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog title" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Title 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog trigger 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Value specified in trigger slot for this example and all others to follow 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog width="large" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      width="large 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/Btn-Link Combos default 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="confirmation" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/Btn-Link Combos negativeLink="false" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="confirmation" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/Btn-Link Combos secBtn="true" && negativeLink="false" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="confirmation" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/Btn-Link Combos secBtn="true" 1`] = `
<div
  class="m-dialog"
  secbtn="true"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="confirmation" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/type default 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Default 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/type type="confirmation" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="confirmation" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/type type="error" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="error" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/type type="information" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="information" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-dialog/type type="warning" 1`] = `
<div
  class="m-dialog"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      type="warning" 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;
